--- a/src/styles/basicTest.scss
+++ b/src/styles/basicTest.scss
@@ -103,6 +103,29 @@ div {
   z-index: 10;
 }
 
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc;
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
+}
+
 .horizontalFill {
   width: 100%;
 }
@@ -128,7 +151,8 @@ div {
 }
 
 .placeholderText {
-  min-height: calc(100% - 10px - #{$navbar-height});
+  height: calc(100% - 10px - #{$navbar-height});
+  overflow-y: auto;
   //line-height: 200px;
   width: 100%;
   text-align: center;
