--- a/src/styles/basicTest.scss
+++ b/src/styles/basicTest.scss
@@ -26,8 +26,27 @@ div {
   overflow: hidden;
 }
 
+.mainPanel {
+  width: 70%;
+  float: left;
+}
+
+.leftPanel {
+  width: 30%;
+  float: left;
+}
+
 .navbar {
   height: $navbar-height;
+}
+
+#swaggerContainer {
+  padding: 10px;
+}
+
+.contentContainer {
+  width: 100%;
+  overflow: hidden;
 }
 
 .button {
