--- a/src/styles/basicTest.scss
+++ b/src/styles/basicTest.scss
@@ -19,6 +19,10 @@ div {
   -moz-border-radius: $radius;
   border-radius: $radius;
 }
+.landing {
+  width: 100%;
+  height: 100%;
+}
 
 .my-element {
   color: $primary-color;
@@ -27,12 +31,12 @@ div {
 }
 
 .mainPanel {
-  width: 70%;
+  width: 80%;
   float: left;
 }
 
 .leftPanel {
-  width: 30%;
+  width: 20%;
   float: left;
 }
 
@@ -170,9 +174,8 @@ div {
 }
 
 .placeholderText {
-  height: calc(100% - 10px - #{$navbar-height});
+  height: calc(100% - 20px - #{$navbar-height});
   overflow-y: auto;
-  //line-height: 200px;
   width: 100%;
   text-align: center;
   border-style: dashed;
