--- a/app/src/styles/basicTest.scss
+++ b/app/src/styles/basicTest.scss
@@ -1,4 +1,4 @@
-@import "node_modules/font-awesome/scss/font-awesome.scss";
+@import "../node_modules/font-awesome/scss/font-awesome.scss";
 // Variable
 $primary-color: hotpink;
 $background-color: #f0f0f8;
